added password and db name in connection string

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PASSWORD=R1FgAniRC2yxVDGM
-CONNECTION_STRING=mongodb+srv://backendUser:<password>@cluster0.h1adxan.mongodb.net/?retryWrites=true&w=majority
+CONNECTION_STRING=mongodb+srv://backendUser:R1FgAniRC2yxVDGM@cluster0.h1adxan.mongodb.net/fileSharingDB?retryWrites=true&w=majority
